Attendance list now allows comments to exist even if no choice is selected; Fixed incorrectly displaying jump to participant button disabled in view mode

--- a/app/Resources/scss/web/event.scss
+++ b/app/Resources/scss/web/event.scss
@@ -330,6 +330,10 @@ input.input-formula, textarea.input-formula {
       cursor: not-allowed;
       opacity: 0.65;
     }
+    .btn.btn-unlockable {
+      cursor: pointer;
+      opacity: 1;
+    }
 
     .hide-if-locked {
       display: none;
